--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -29,10 +29,10 @@
     <title>React App</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="mapContainer" class="mapContainer"></div>
     <div id="root"></div>
     <!--
-      This HTML file is a template.
+      This HTML file is a template.z
       If you open it directly in the browser, you will see an empty page.
 
       You can add webfonts, meta tags, or analytics to this file.
