replace map with Leaflet

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
-      name="description"
-      content="Web site created using create-react-app"
+      name="Travel Time Request App"
+      content="Request historic average travel time on streets in Toronto"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v1.3.1/mapbox-gl.css' rel='stylesheet' />
@@ -28,17 +28,6 @@
     <title>Travel Time Request App</title>
   </head>
   <body>
-    <div id="mapContainer" class="mapContainer"></div>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.z
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
   </body>
 </html>
